# tenacity-rs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATION.md  NOTICE  PUBLISHING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  bench.py  requirements.txt
python/tenacity_rs/: __init__.py  _async.py
scripts/: maturin-develop.sh
src/: lib.rs  retry_condition.rs  retrying.rs  stop.rs  wait.rs
tests/: test_api_parity.py  test_async.py  test_decorators.py  test_retry_condition.py  test_retry_conditions.py  test_retrying.py  test_stop.py  test_wait.py
